--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -4,39 +4,27 @@
 - title: Participant Feedback
   pages:
     - path: /participant-feedback
-- title: In Person Program
+- title: U.S. – In Person Program
   pages:
     - title: Overview
-      path: /in-person-program/overview
+      path: /us-in-person/overview
     - title: Handouts
-      path: /in-person-program/handouts
-- title: Virtual Sessions - Africa
+      path: /us-in-person/handouts
+- title: Africa – Virtual Sessions
   pages:
-    - title: 2023 - Preparation and Presentations
+    - title: Overview
+      path: /virtual-sessions-africa/overview
+    - title: Prep and Presentations
       path: /virtual-sessions-africa/2023-preparation-and-presentations
-    - title: 2023 - Replays
+    - title: Replays
       path: /virtual-sessions-africa/2023-replays
-    - title: 2023 - Graduation Certificate and Resources
-      path: /virtual-sessions-africa/2023-graduation-certificate-and-resources
     - title: Last Year - Preparation and Presentations
       path: /virtual-sessions-africa/last-year-preparation-and-presentations
     - title: Last Year - Replays
       path: /virtual-sessions-africa/last-year-replays
-    - title: Last Year - Graduation Certificate and Resources
-      path: /virtual-sessions-africa/last-year-graduation-certificate-and-resources
-- title: Virtual Sessions - India
+- title: India – In Person
   pages:
-    - title: 2022 - Preparation and Presentations
-      path: /virtual-sessions-india/2022-preparation-and-presentations
-    - title: 2022 - Replays
-      path: /virtual-sessions-india/2022-replays
-    - title: 2022 - Graduation Certificate and Resources
-      path: /virtual-sessions-india/2022-graduation-certificate-and-resources
-- title: Virtual Sessions - United States
-  pages:
-    - title: 2022 - Preparation and Presentations
-      path: /virtual-sessions-united-states/2022-preparation-and-presentations
-    - title: 2022 - Replays
-      path: /virtual-sessions-united-states/2022-replays
-    - title: 2022 - Graduation Certificate and Resources
-      path: /virtual-sessions-united-states/2022-graduation-certificate-and-resources
+    - title: Overview
+      path: /virtual-sessions-india/2023-overview
+    - title: 2022 Program
+      path: /virtual-sessions-india/2022-program
