--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "build": "gatsby build --prefix-paths",
     "build:clean": "yarn clean && gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master"
   },
   "dependencies": {
     "gatsby": "^3.3.1",
     "gatsby-theme-carbon": "^2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
